--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1252,8 +1252,8 @@
  GRA_communism_ADJ:0 "German"
  GRA_monarchist:1 "German Empire"
  GRA_monarchist_DEF:1 "the German Empire"
- GRA_socialist:0 "Socialist Republic of Germany"
- GRA_socialist_DEF:0 "the Socialist Republic of Germany"
+ GRA_socialist:0 "German Red Army"
+ GRA_socialist_DEF:0 "the German Red Army"
  GRA_monarchist_ADJ:0 "German"
  GRA_socialist_ADJ:0 "German"
  GRA:0 "Germany"
