--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -197,9 +197,9 @@
     GEO_monarchist:0 "Georgia"
     GEO_monarchist_ADJ:0 "Georgian"
     GEO_monarchist_DEF:0 "Kingdom of Georgia"
-    GER_monarchist:0 "Kingdom of Germany"
+    GER_monarchist:0 "German Empire"
     GER_monarchist_ADJ:0 "German"
-    GER_monarchist_DEF:0 "Kingdom of Germany"
+    GER_monarchist_DEF:0 "German Empire"
     GHA_monarchist:0 "Ghana"
     GHA_monarchist_ADJ:0 "Ghanaian"
     GHA_monarchist_DEF:0 "Kingdom of Ghana"
