--- a/localisation/strategic_region_names_l_english.yml
+++ b/localisation/strategic_region_names_l_english.yml
@@ -36,7 +36,7 @@
  STRATEGICREGION_36:0 "Greenland"
  STRATEGICREGION_37:0 "Baltic States"
  STRATEGICREGION_38:1 "Poland"
- STRATEGICREGION_39:0 "Eastern Poland"
+ STRATEGICREGION_39:1 "Western Belarus"
  STRATEGICREGION_40:1 "Transvolga"
  STRATEGICREGION_41:2 "Northeastern Iberia"
  STRATEGICREGION_42:0 "Bay of Biscay"
