--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -809,7 +809,10 @@
  STATE_808:1 "Copenhagen"
  STATE_809:1 "Funen"
  STATE_810:1 "Bornholm"
- STATE_811:0 "STATE_811"
+ STATE_811:0 "Italian Tyrol"
  STATE_812:0 "Ljubljana"
- STATE_813:0 "STATE_813"
+ STATE_813:0 "South Sudetenland"
  STATE_814:0 "Riga"
+ STATE_815:0 "Upper Banat"
+ STATE_816:0 "Constanta"
+ STATE_817:0 "Danube Delta"
