--- a/localisation/strategic_region_names_l_english.yml
+++ b/localisation/strategic_region_names_l_english.yml
@@ -19,7 +19,7 @@
  STRATEGICREGION_19:0 "Northern France"
  STRATEGICREGION_20:0 "Southern France"
  STRATEGICREGION_21:0 "Alpine Region"
- STRATEGICREGION_22:0 "Czechoslovakia"
+ STRATEGICREGION_22:1 "Czechia"
  STRATEGICREGION_23:0 "Italy"
  STRATEGICREGION_24:0 "Western Balkans"
  STRATEGICREGION_25:0 "Greece"
@@ -210,3 +210,4 @@
  STRATEGICREGION_210:0 "Southern Iberia"
  STRATEGICREGION_211:0 "Prussia"
  STRATEGICREGION_212:0 "West Ukraine"
+ STRATEGICREGION_213:0 "Slovakia"
