--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1850,6 +1850,30 @@
  GER:0 "Germany"
  GER_DEF:0 "Germany"
  GER_ADJ:0 "German"
+ GEG_fascism:0 "German Army State"
+ GEG_fascism_DEF:0 "the German Army State"
+ GEG_democratic:0 "German Republic"
+ GEG_democratic_DEF:0 "the German Republic"
+ GEG_neutrality:1 "German Empire"
+ GEG_neutrality_DEF:1 "the German Empire"
+ GEG_communism:0 "Socialist Republic of Germany"
+ GEG_communism_DEF:0 "the Socialist Republic of Germany"
+ GEG_liberal:0 "German Republic"
+ GEG_liberal_DEF:0 "the German Republic"
+ GEG_monarchist:1 "German Eastern Garrison"
+ GEG_monarchist_DEF:1 "the German Eastern Garrison"
+ GEG_socialism:0 "Socialist Republic of Germany"
+ GEG_socialism_DEF:0 "the Socialist Republic of Germany"
+ GEG_fascism_ADJ:0 "German"
+ GEG_democratic_ADJ:0 "German"
+ GEG_neutrality_ADJ:0 "German"
+ GEG_communism_ADJ:0 "German"
+ GEG_liberal_ADJ:0 "German"
+ GEG_monarchist_ADJ:0 "German"
+ GEG_socialist_ADJ:0 "German"
+ GEG:0 "Germany"
+ GEG_DEF:0 "Germany"
+ GEG_ADJ:0 "German"
  GRA_fascism:0 "German Reich"
  GRA_fascism_DEF:0 "the German Reich"
  GRA_democratic:0 "German Republic"
