--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1874,6 +1874,12 @@
  GEG:0 "Germany"
  GEG_DEF:0 "Germany"
  GEG_ADJ:0 "German"
+ QDC_socialism:0 "Qingdao"
+ QDC_socialism_DEF:0 "the Qingdao Clique"
+ QDC_socialist_ADJ:0 "Chinese"
+ QDC:0 "Qingdao"
+ QDC_DEF:0 "Qingdao"
+ QDC_ADJ:0 "Chinese"
  GRA_fascism:0 "German Reich"
  GRA_fascism_DEF:0 "the German Reich"
  GRA_democratic:0 "German Republic"
