--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1874,12 +1874,18 @@
  GEG:0 "Germany"
  GEG_DEF:0 "Germany"
  GEG_ADJ:0 "German"
- QDC_socialism:0 "Qingdao"
- QDC_socialism_DEF:0 "the Qingdao Clique"
+ QDC_socialism:0 "Shandong Clique"
+ QDC_socialism_DEF:0 "the Shandong Clique"
  QDC_socialist_ADJ:0 "Chinese"
- QDC:0 "Qingdao"
- QDC_DEF:0 "Qingdao"
+ QDC:0 "Shandong"
+ QDC_DEF:0 "Shandong"
  QDC_ADJ:0 "Chinese"
+ UFT_communism:0 "Ukrainian Free Territory"
+ UFT_communism_DEF:0 "the Ukrainian Free Territory"
+ UFT_communism_ADJ:0 "Ukrainian"
+ UFT:0 "Ukraine"
+ UFT_DEF:0 "Ukraine"
+ UFT_ADJ:0 "Ukranian"
  GRA_fascism:0 "German Reich"
  GRA_fascism_DEF:0 "the German Reich"
  GRA_democratic:0 "German Republic"
