--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1886,6 +1886,12 @@
  UFT:0 "Ukraine"
  UFT_DEF:0 "Ukraine"
  UFT_ADJ:0 "Ukranian"
+ RSP_liberal:0 "Russian Separatist Army"
+ RSP_liberal_DEF:0 "the Russian Separatist Army"
+ RSP_liberal_ADJ:0 "Russian"
+ RSP:0 "Russia"
+ RSP_DEF:0 "Russia"
+ RSP_ADJ:0 "Russian"
  GRA_fascism:0 "German Reich"
  GRA_fascism_DEF:0 "the German Reich"
  GRA_democratic:0 "German Republic"
