--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -4,6 +4,9 @@
  socialist:0 "Socialism"
  socialist_noun:0 "Socialist"
  socialist_desc:0 "Socialist State"
+ liberal:0 "Liberalism"
+ liberal_noun:0 "Liberal"
+ liberal_desc:0 "Liberal Republic"
  democratic:0 "Democratic"
  democratic_noun:0 "Democracy"
  fascism:0 "Fascist"
@@ -14,12 +17,18 @@
  monarchist_desc:0 "Monarchist Kingdom"
  communism_desc:0 "Totalitarian Regime"
  democratic_desc:0 "Democratic Regime"
+ liberal_type:0 "Liberalism"
+ liberal_type_desc:0 "Liberalism"
+ monarchy:0 "Monarchist"
+ monarchy_desc:0 "Monarchist"
+ military_leadership:0 "Military Leadership (Monarchist)"
+ military_leadership_desc:0 "Military Leadership (Monarchist)"
  conservatism:0 "Conservatism"
  conservatism_desc:0 "Considering rapid changes to society to be potentially harmful, conservatism espouses tradition and moderate reforms, sometimes advocating a return to old moral values."
  liberalism:0 "Liberalism"
  liberalism_desc:0 "With a long philosophical tradition of valuing personal liberty, liberalism views safeguarding these rights as the primary function of the state."
  socialism:0 "Socialism"
- socialism_desc:0 "Striving for equality and a socialist state by reformist means, democratic socialism aims to abolish or mitigate the effects of capitalism with public mandate."
+ socialism_desc:0 "Striving for equality and a socialist state by reformist means, socialism aims to abolish or mitigate the effects of capitalism with public mandate."
  marxism:0 "Marxism"
  marxism_desc:0 "Encompassing a broad spectrum of economic and historical views, Marxist politics seek to apply the theories of Karl Marx to political practice. Class struggle and the need for transition to a society based on common ownership of the means of production characterize these ideologies."
  leninism:0 "Leninism"
