--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -3,7 +3,7 @@
  STATE_2:0 "Latium"
  STATE_3:0 "Switzerland"
  STATE_4:0 "Lower Austria"
- STATE_5:1 "Ermland-Masuren"
+ STATE_5:1 "Lyck"
  STATE_6:0 "Vlaanderen"
  STATE_7:0 "Holland"
  STATE_8:0 "Luxemburg"
@@ -56,7 +56,7 @@
  STATE_55:0 "Hessen"
  STATE_56:0 "Weser-Ems"
  STATE_57:0 "Westfalen"
- STATE_58:0 "Schleswig-Holstein"
+ STATE_58:0 "Hamburg"
  STATE_59:0 "Hannover"
  STATE_60:0 "Thüringen"
  STATE_61:0 "Mecklenburg"
@@ -83,7 +83,7 @@
  STATE_82:0 "Banat"
  STATE_83:0 "Crisana"
  STATE_84:0 "Transylvania"
- STATE_85:0 "Danzig"
+ STATE_85:0 "Pomerelia"
  STATE_86:0 "Poznan"
  STATE_87:1 "Łódz"
  STATE_88:0 "Krakow"
@@ -816,3 +816,7 @@
  STATE_815:0 "Upper Banat"
  STATE_816:0 "Constanta"
  STATE_817:0 "Danube Delta"
+ STATE_818:0 "Allenstein"
+ STATE_819:0 "City of Danzig"
+ STATE_820:0 "Stettin"
+ STATE_821:0 "Kiel"
