--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -820,3 +820,5 @@
  STATE_819:0 "City of Danzig"
  STATE_820:0 "Stettin"
  STATE_821:0 "Kiel"
+ STATE_827:0 "East Jiuquan"
+ STATE_828:0 "Upper Sichuan"
