French Republic + some other stuff

--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -1,24 +1,29 @@
 ﻿l_english:
  communism:0 "Communist"
  communism_noun:0 "Communism"
- socialist:0 "Socialism"
- socialist_noun:0 "Socialist"
+ socialist:0 "Socialist"
+ socialist_noun:0 "Socialism"
  socialist_desc:0 "Socialist State"
- liberal:0 "Liberalism"
- liberal_noun:0 "Liberal"
+ liberal:0 "Liberal"
+ liberal_noun:0 "Liberalism"
  liberal_desc:0 "Liberal Republic"
  democratic:0 "Democratic"
  democratic_noun:0 "Democracy"
+ social_democratic:0 "Social Democratic"
+ social_democratic_noun:0 "Social Democracy"
  fascism:0 "Fascist"
  fascism_noun:0 "Fascism"
  fascism_desc:0 "Totalitarian Regime"
  monarchist:0 "Monarchist"
  monarchist_noun:0 "Monarchy"
+ social_democratic_desc:0 "Social Democracy"
  monarchist_desc:0 "Monarchist Kingdom"
  communism_desc:0 "Totalitarian Regime"
  democratic_desc:0 "Democratic Regime"
  liberal_type:0 "Liberalism"
  liberal_type_desc:0 "Liberalism"
+ social_dem_type:0 "Social Democracy"
+ social_dem_type_desc:0 "Social Democracy"
  monarchy:0 "Monarchist"
  monarchy_desc:0 "Monarchist"
  military_leadership:0 "Military Leadership (Monarchist)"
