Black Tuesday, bookmarks, etc

--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -4,6 +4,9 @@
  socialist:0 "Socialist"
  socialist_noun:0 "Socialism"
  socialist_desc:0 "Socialist State"
+ conservative:0 "Conservative"
+ conservative_noun:0 "Conservatism"
+ conservative_desc:0 "Conservative Democracy"
  liberal:0 "Liberal"
  liberal_noun:0 "Liberalism"
  liberal_desc:0 "Liberal Republic"
@@ -20,6 +23,8 @@
  monarchist_desc:0 "Monarchist Kingdom"
  communism_desc:0 "Totalitarian Regime"
  democratic_desc:0 "Democratic Regime"
+ conservative_type:0 "Conservatism"
+ conservative_type_dec:0 "Considering rapid changes to society to be potentially harmful, conservatism espouses tradition and moderate reforms, sometimes advocating a return to old moral values."
  liberal_type:0 "Liberalism"
  liberal_type_desc:0 "Liberalism"
  social_dem_type:0 "Social Democracy"
@@ -83,6 +88,7 @@
  POL_neutrality_party:0 "BBWR"
  ENG_communism_party:0 "CPGB"
  ENG_democratic_party:0 "Conservative Party"
+ ENG_conservative_party:0 "Conservative Party"
  ENG_fascism_party:0 "British Union of Fascists"
  ENG_neutrality_party_kings_party:0 "King's Party"
  ENG_neutrality_party_kings_party_long:0 "The King's Party"
