--- a/localisation/sgw_decisions_l_english.yml
+++ b/localisation/sgw_decisions_l_english.yml
@@ -10,3 +10,4 @@
  ffr_tunisian_resistance_desc:0 "Tunisian Resistance Level -> [?tunisian_resistance_level|§Y0 ]"
  develop_infrastructure_in_tunisia:0 "Develop Infrastructure in Tunisia"
  eliminate_tun_resistance_leaders:0 "Eliminate Tunisian Resistance Leaders"
+ begin_eco_crisis_recovery:0 "Begin Black Tuesday Crisis Recovery"
