--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1960,6 +1960,8 @@
  ENG_fascism_DEF:0 "the British Empire"
  ENG_democratic:0 "United Kingdom"
  ENG_democratic_DEF:0 "the United Kingdom"
+ ENG_conservative:0 "United Kingdom of Great Britain"
+ ENG_conservative_DEF:0 "the United Kingdom of Great Britain"
  ENG_neutrality:0 "Great Britain"
  ENG_neutrality_DEF:0 "Great Britain"
  ENG_communism:0 "Union of Britain"
