--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,5 +1,9 @@
 ﻿l_english:
 
+    SIB_democratic:0 "Far Eastern Republic"
+    SIB_democratic_ADJ:0 "East Russian"
+    SIB_democratic_DEF:0 "the Far Eastern Republic"
+
     SIC_neutrality:0 "Sichuan Clique"
     SIC_neutrality_ADJ:0 "Chinese"
     SIC_neutrality_DEF:0 "the Sichuan Clique"
