--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -176,6 +176,12 @@
  KEN_ENG_autonomy_colony:0 "Colony of Kenya"
  KEN_ENG_autonomy_puppet:0 "British Kenya"
  KEN_ENG_autonomy_integrated_puppet:0 "British East Africa"
+ IRE_ENG_autonomy_dominion:0 "Dominion of Ireland"
+ IRE_ENG_autonomy_dominion_DEF:0 "the Dominion of Ireland"
+ TUN_FFR_autonomy_integrated_puppet:0 "French Tunisia"
+ TUN_FFR_autonomy_integrated_puppet_DEF:0 "French Tunisia"
+ SAF_ENG_autonomy_dominion:0 "Union of South Africa"
+ SAF_ENG_autonomy_dominion_DEF:0 "the Union of South Africa"
  NGA_ENG_autonomy_dominion:0 "Dominion of Nigeria"
  NGA_ENG_autonomy_colony:0 "Colony of Nigeria"
  NGA_ENG_autonomy_puppet:0 "British West Africa"
