--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -28,9 +28,9 @@
     MEN_fascism_ADJ:0 "Chinese"
     MEN_fascism_DEF:0 "Wang's Government"
 
-    FFR_democratic:0 "French Republic"
-    FFR_democratic_ADJ:0 "French"
-    FFR_democratic_DEF:0 "the French Republic"
+    FFR_conervative:0 "French Republic"
+    FFR_conservative_ADJ:0 "French"
+    FFR_conservative_DEF:0 "the French Republic"
     FFR:0 "French Republic"
     FFR_DEF:0 "France"
     FFR_ADJ:0 "French"
@@ -1308,9 +1308,9 @@
     BAY_liberal:0 "Bavaria"
     BAY_liberal_ADJ:0 "Bavarian"
     BAY_liberal_DEF:0 "Republic of Bavaria"
-    BEL_liberal:0 "Belgium"
+    BEL_liberal:0 "Republic of Belgium"
     BEL_liberal_ADJ:0 "Belgian"
-    BEL_liberal_DEF:0 "Republic of Belgium"
+    BEL_liberal_DEF:0 "the Republic of Belgium"
     BHU_liberal:0 "Bhutan"
     BHU_liberal_ADJ:0 "Bhutanese"
     BHU_liberal_DEF:0 "Republic of Bhutan"
@@ -1503,9 +1503,9 @@
     HAW_liberal:0 "Hawaii"
     HAW_liberal_ADJ:0 "Hawai'ian"
     HAW_liberal_DEF:0 "Republic of Hawaii"
-    HOL_liberal:0 "Holland"
+    HOL_liberal:0 "Republic of Holland"
     HOL_liberal_ADJ:0 "Dutch"
-    HOL_liberal_DEF:0 "Republic of Holland"
+    HOL_liberal_DEF:0 "the Republic of Holland"
     HON_liberal:0 "Honduras"
     HON_liberal_ADJ:0 "Honduran"
     HON_liberal_DEF:0 "Republic of Honduras"
@@ -2026,6 +2026,8 @@
  FRA_neutrality_DEF:0 "Bourbon France"
  FRA_communism:0 "French Commune"
  FRA_communism_DEF:0 "the French Commune"
+ FRA_social_democratic:0 "Commune of France"
+ FRA_social_democratic_DEF:0 "the Commune of France"
  FRA_fascism_ADJ:2 "French"
  FRA_democratic_ADJ:0 "French"
  FRA_neutrality_ADJ:0 "French"
@@ -4477,8 +4479,8 @@
  GNB_ADJ:0 "Bissau-Guinean"
  SEN_fascism:1 "Senegal Dictatorial State"
  SEN_fascism_DEF:1 "Senegal Dictatorial State"
- SEN_democratic:0 "Senegal"
- SEN_democratic_DEF:0 "Senegal"
+ SEN_democratic:0 "Confederation of Senagambia"
+ SEN_democratic_DEF:0 "the Confederation of Senagambia"
  SEN_neutrality:1 "State of Jolof"
  SEN_neutrality_DEF:1 "State of Jolof"
  SEN_communism:1 "Democratic People's Republic of Senegal"
