--- a/localisation/sgw_events_l_english.yml
+++ b/localisation/sgw_events_l_english.yml
@@ -11,4 +11,14 @@
  french_republic.3.t:0 "Tunisian Resistance Leader Survives assassination attempt"
  french_republic.3.d:0 "Our plan to assassinate a Tunisian Resistance Leader has failed, and now resistance has ramped up in severity."
  french_republic.3.a:0 "Not good"
+ french_republic.4.t:0 "French-Algerian Railway Corporation Founded"
+ french_republic.4.d:0 "Today, a representitive from the Department of Industry of the French government has announced the formation of the French-Algerian Railway Corporation."
+ french_republic.4.a:0 "It is in our best intrests to invest in this company."
+ french_republic.5.t:0 "French Republic Rearmament Conference"
+ french_republic.5.d:0 "Today, top military leaders from across the republic met in [FFR.Capital.GetName] to discuss two plans for the rearmament of the French Republic\n\nThe first plan is Charles de Gaulles plan, who argues that Mobile Warfare is the future of war. As for the other, plan, Henri Giraud has stated that Trench Warfare had proved necessary to bring the Great War to a stalemate, and that the effectiveness of mobile warfare is yet to be proved.\n\nWhich plan does the conference decide to implement?"
+ french_republic.5.a:0 "de Gaulles Plan - Mobile Warfare is the next chapter of war"
+ french_republic.5.b:0 "Girauds Plan - Ey, it sort of worked in the Great War"
+ french_republic.6.t:0 "Charles de Gaulle Assassination Attempt!"
+ french_republic.6.d:0 "Today, Charles de Gaulle was being driven home in his open top car when disaster struck!\n\nFrom the shadows, a young Algerian national"
+ french_republic.6.a:0 "Mon Dieu!"
  
