--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -355,6 +355,8 @@
  HOL_communism_party_long:0 "Communistische Partij Nederland"
  HOL_democratic_party:1 "ARP"
  HOL_democratic_party_long:1 "Anti-Revolutionaire Partij"
+ HOL_liberal_party:1 "ARP"
+ HOL_liberal_party_long:1 "Anti-Revolutionaire Partij"
  HOL_fascism_party:0 "NSB"
  HOL_fascism_party_long:1 "Nationaal-Socialistische Beweging"
  HOL_CHU_party:0 "CHU"
@@ -363,6 +365,8 @@
  BEL_communism_party_long:0 "Kommunistische Partij van België"
  BEL_democratic_party:0 "Catholic Block"
  BEL_democratic_party_long:0 "Catholic Block"
+ BEL_liberal_party:0 "Catholic Block"
+ BEL_liberal_party_long:0 "Catholic Block"
  BEL_fascism_party:0 "Rex"
  BEL_fascism_party_long:0 "Parti Rexiste"
  SWI_communism_party:0 "KPS"
