--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -35,6 +35,9 @@
     FFR_conervative:0 "French Republic"
     FFR_conservative_ADJ:0 "French"
     FFR_conservative_DEF:0 "the French Republic"
+    FFR_despotism:0 "French Provisional Government"
+    FFR_despotism_ADJ:0 "French"
+    FFR_despotism_DEF:0 "the French Provisional Government"
     FFR:0 "French Republic"
     FFR_DEF:0 "France"
     FFR_ADJ:0 "French"
