--- a/localisation/sgw_events_l_english.yml
+++ b/localisation/sgw_events_l_english.yml
@@ -19,6 +19,15 @@
  french_republic.5.a:0 "de Gaulles Plan - Mobile Warfare is the next chapter of war"
  french_republic.5.b:0 "Girauds Plan - Ey, it sort of worked in the Great War"
  french_republic.6.t:0 "Charles de Gaulle Assassination Attempt!"
- french_republic.6.d:0 "Today, Charles de Gaulle was being driven home in his open top car when disaster struck!\n\nFrom the shadows, a young Algerian national"
+ french_republic.6.d:0 "On Charles de Gaulle's way home from the bi-monthly budget confernece, a young Algerian national appeared from the shadows off to the side of the road. The man raised his handgun, and fired 3 shots...\n\nTwo rounds hit de Gaulle's chest, the final shot missed him entirely. Before the Algerian National managed to take a step, a guard in the car behind de Gaulle shot the man dead. Charles de Gaulle was rushed to the closest hospital, where de Gaulle underwent a 10-hour surgery to remove the bullets from his chest.\n\nWhere Charles de Gaulle will remain unable to lead the nation for §R2 months§!, a Provisional Government, led by Henri Giraud, has been set up to take charge of the nation while de Gaulle is recovering."
  french_republic.6.a:0 "Mon Dieu!"
+ french_republic.7.t:0 "Tunisian Resistance"
+ french_republic.7.d:0 "Marcel Peyrouton, the Resident-General of French Tunisia, reports that a group of Tunisian Nationals have attacked a patrol in the Tunisian town of Gabes. According to survivors and onlookers, the patrol were doing their daily patrol around the outskirts of Gabes when a massive bomb was set of, killing dozens of French soldiers. Then, a group of about ten nationals ran towards the dazed patrol, killing off two dozen more of our men. It was a complete massacre of about a fifth of the patrol, where 89 men perished."
+ french_republic.7.a:0 "Damn Rebels!"
+ french_republic.8.t:0 "Tunisian National Council Formed"
+ french_republic.8.d:0 "Earlier today, Habib Bourguiba, a leading Tunisian Resistance leader, declared the formation of a Nationalist Council to centralize the multiple different Tunisian resistance groups. It is clear that the situation in Tunisia is escalating fast, and something must be done about it."
+ french_republic.8.a:0 "God! Send men to Tunisia!"
+ french_republic.9.t:0 "Martial Law declared in Tunisia"
+ french_republic.9.d:0 "Marcel Peyrouton and Henri Mordacq, Chief of Army for the Tunisian Militias, have stated that martial law has been declared in French Tunisia. This action has been taken to counter-balance the formation of the Tunisian National Council, which have been hard at work centralizing the resistance since it's formation."
+ french_republic.9.a:0 "Order needs to return, no matter the cost!"
  
