--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -63,7 +63,7 @@
  neutrality_noun:0 "Non-Aligned"
  neutrality_desc:0 "Authoritarian Regime"
  despotism:0 "Despotic"
- despotism_desc:0 "Despotism is a form of government in which a single person rules with absolute power."
+ despotism_desc:0 "Despotic Regime"
  oligarchism:0 "Oligarchic"
  oligarchism_desc:0 "Oligarchy is a form of government in which a group of people rule with absolute power."
  moderatism:1 "Moderatism"
